# civet

backend/: .air.toml  .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  compose.yaml  docker-compose.yaml  docker-stack.yaml  go.mod  go.sum  notes.md  pyproject.toml  query.sql  sqlc.yaml
backend/alembic/versions/: 26e347a4c5a8_create_outing_table.py  2ebcc8f8c208_create_receipt_tables.py
backend/app/: main.py
backend/app/cloud_vision/: cloud_vision.py
backend/app/core/: db.py
backend/app/openai/: openai.py
backend/app/receipt/: receipt.py  schema.py  utils.py
backend/app/routers/: deps.py
backend/app/routers/auth/: auth.py  utils.py
backend/app/storage/: storage.py
backend/app/utils/: utils.py
backend/cmd/api/: main.go
backend/cmd/test/: main.go
backend/db/migrations/: 000001_create_receipt_tables.down.sql  000001_create_receipt_tables.up.sql  000002_create_splits.down.sql  000002_create_splits.up.sql  000003_create_cache_tables.down.sql  000003_create_cache_tables.up.sql
backend/internal/cloudvision/: cloudvision.go
backend/internal/config/: config.go
backend/internal/genai/: genai.go
backend/internal/receipt/: receipt.go  schema.go  utils.go
backend/internal/repository/: models.go  query.sql.go
backend/internal/storage/: minio.go  storage.go
backend/pkg/api/: router.go
backend/pkg/database/: db.go
backend/pkg/middleware/: auth.go  cors.go
backend/scrips/: create-docker-secret.py  local_deploy.sh
backend/scripts/: bulk_upload.sh  test.sh
backend/templates/: base.html  receipt.html  receipt_list.html
(+49 files in other folders)
